# nba-research-zone

./: .cursorignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  .yoyorc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DATA_SOURCING.md  MIGRATION_SUMMARY.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PRD.md  README.md  coverage.json  pre-commit-config.yaml  pyproject.toml  python-dotenv.txt  resources.md
.claude/: settings.local.json
.cline/agents/: plan-implementer.md
.cline/skills/conversation-analyzer/scripts/: analyze_history.py
.cline/skills/jobs-to-be-done/: SKILL.md
.clinerules/workflows/: codebase-auditor.md  fix.md  pr.md  worktrees.md
.cursor/agents/: ensemble-orchestrator.md
.cursor/commands/: analyze-patterns.md  audit.md
.cursor/skills/hypothesis-tree/: SKILL.md
.cursor/skills/kanban/: SKILL.md
.github/workflows/: ci.yml
docs/: DATA_INGESTION_GUIDE.md  NEW_FEATURES_SUMMARY.md
duckdb/views/: v_franchise_timeline.sql  v_game_officials.sql  v_head_to_head_records.sql  v_injury_impact.sql  v_lineup_performance.sql  v_player_advanced_complete.sql  v_player_career_stats.sql  v_player_tracking_summary.sql  v_season_leaders.sql  v_shot_zone_agg.sql  v_team_efficiency_analysis.sql
exports/: nba_full.json
migrations/: 0001_initial_schema.sql  0002_seed_data.sql  0003_missing_features.sql  0004_missing_features_indexes.sql  0005_seed_teams_and_seasons.sql  0006_elo_raptor_tables.sql
nba_vault/: __init__.py  cli.py
nba_vault/cli/: __init__.py  admin.py  advanced_stats.py  export.py  game_data.py  ingestion.py  scrapers.py
nba_vault/duckdb/: __init__.py  builder.py
nba_vault/ingestion/: __init__.py  audit.py  awards.py  base.py  basketball_reference.py  box_scores.py  box_scores_advanced.py  box_scores_hustle.py  coaches.py  contracts.py  draft.py  draft_combine.py  elo.py  exceptions.py  games.py  injuries.py  lineups.py  nba_stats_client.py  play_by_play.py  player_bio.py  player_season_stats.py  player_tracking.py  players.py  pre_modern_box_scores.py  raptor.py  registry.py  seasons.py  shot_chart.py  shufinskiy.py  team_advanced_stats.py  team_other_stats.py  validation.py
nba_vault/ingestion/adapters/: __init__.py  nba_stats_adapter.py
nba_vault/ingestion/scrapers/: __init__.py  injury_scrapers.py
nba_vault/models/: __init__.py  advanced_stats.py  coach.py  entities.py  franchise.py  game.py  league.py  official.py  player.py  players.py  season.py  team.py
nba_vault/schema/: __init__.py  connection.py  migrations.py
nba_vault/utils/: __init__.py  cache.py  config.py  logging.py  rate_limit.py
scripts/: _recovery_players_2013_2025.ps1  _run_full_ingest.ps1  check.ps1  check.sh  fix.ps1  fix.sh  gen_seed_migration.py  ingest_all.ps1  ingest_all.py  ingest_all_remaining.ps1
tests/: __init__.py  conftest.py  test_adapter_pattern.py  test_base_ingestor.py  test_basketball_reference_client.py  test_cli.py  test_cli_admin.py  test_cli_advanced_stats.py  test_cli_export.py  test_cli_ingestion.py  test_cli_scrapers.py  test_contracts_ingestor.py  test_duckdb_builder.py  test_infrastructure.py  test_ingestion.py  test_ingestion_players.py  test_ingestor_contracts.py  test_ingestor_injuries.py  test_ingestor_lineups.py  test_ingestor_player_tracking.py  test_ingestor_registry.py  test_ingestor_team_stats.py  test_injuries_ingestor.py  test_injury_scrapers.py  test_lineups_ingestor_detailed.py  test_models.py  test_nba_stats_client_simple.py  test_new_ingestors.py  test_player_tracking_detailed.py  test_schema.py  test_utils.py  test_utils_logging.py
