[project]
name = "nba-vault"
version = "0.1.0"
description = "Comprehensive Historical NBA Database - SQLite + DuckDB analytical engine"
authors = [
    {name = "Nick", email = "nick@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

dependencies = [
    "nba-api>=1.4.1",
    "basketball-reference-web-scraper>=1.10.0",
    "duckdb>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "structlog>=23.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "pyarrow>=14.0.0",
    "apscheduler>=3.10.0",
    "yoyo-migrations>=8.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.9.0",
    "ty>=0.0.1",
    "pre-commit>=3.5.0",
    "sqlfluff>=3.0.0",
]

[project.scripts]
nba-vault = "nba_vault.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff configuration - Modern Python linter and formatter
[tool.ruff]
target-version = "py312"
line-length = 100

# Directories to exclude from linting
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".migrations-state",
    "venv",
]

[tool.ruff.lint]
# Enable modern rule sets - replaces flake8, isort, pyupgrade, etc.
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade (modernize syntax)
    "B",      # flake8-bugbear (bug detection)
    "C4",     # flake8-comprehensions
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security) — important for web-scraping ingestors
    "G",      # flake8-logging-format — ensure structlog calls are consistent
    "SIM",    # flake8-simplify — reduce code complexity
]

ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR09",   # too many X (too strict for now)
    "PLR2004", # magic value comparison
    "TRY003",  # long exception messages
    "S101",    # assert — handled per-file for tests; also used in prod guards
    "G004",    # logging f-string — structlog uses keyword args, not %-format, so f-strings are fine here
    "SIM108",  # ternary operator — often less readable than if/else in data code
]

[tool.ruff.lint.isort]
known-first-party = ["nba_vault"]

[tool.ruff.lint.per-file-ignores]
# Tests: asserts, hardcoded values, bandit security checks, and lazy imports inside
# fixtures/test functions are all intentional patterns in test code
"tests/*" = ["S101", "S", "PLR2004", "PLC0415"]
# Web scrapers use requests.Session — timeout is set per-call (.get(timeout=30)), not on Session init
"nba_vault/ingestion/injuries.py" = ["S113"]
"nba_vault/ingestion/contracts.py" = ["S113"]
# CLI entrypoint: Typer *requires* function calls in defaults (B008), and
# uses lazy intra-function imports to avoid circular deps and speed startup (PLC0415)
"nba_vault/cli.py" = ["S603", "S607", "B008", "PLC0415"]

# Ty configuration - Modern type checker by Astral (currently at v0.0.17)
# See: https://docs.astral.sh/ty/configuration/
[tool.ty]

[tool.ty.environment]
# Pin to the project's Python version
python-version = "3.12"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=nba_vault --cov-report=term-missing"

# Coverage configuration
[tool.coverage.run]
source = ["nba_vault"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
